# ize

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  TESTING_STRATEGY_ANALYSIS.md  architecture.md  architecture2.md  core_types.md  next-steps.md  operations.md  testing.md  watch.sh
.beads/: issues.jsonl
.cargo/: config.toml
claris-fuse/: Cargo.toml
claris-fuse-lib/: Cargo.toml
claris-fuse-lib/docs/: diesel_testing.md
claris-fuse-lib/migrations/2023-05-10-add-entity-type/: down.sql  up.sql
claris-fuse-lib/migrations/20231001000000_create_file_paths_table/: down.sql  up.sql
claris-fuse-lib/migrations/20231001000001_create_versions_table/: down.sql  up.sql
claris-fuse-lib/migrations/20231001000002_create_contents_table/: up.sql
claris-fuse-lib/migrations/20231001000003_create_versions_fts_table/: down.sql  up.sql
claris-fuse-lib/src/: lib.rs
claris-fuse-lib/src/cli/: commands.rs
claris-fuse-lib/src/domain/: mod.rs  models.rs  repositories.rs  services.rs  standard_fs.rs
claris-fuse-lib/src/filesystem/: mod.rs  passthrough.rs  types.rs
claris-fuse-lib/src/filesystems/: mod.rs  passthrough.rs
claris-fuse-lib/src/storage/: mod.rs  models.rs  sqlite.rs  sqlite_schema.rs  traits.rs
claris-fuse-lib/src/storage/diesel_sqlite/: mod.rs  models.rs  models_updated.rs  schema.rs  schema_updated.rs
claris-fuse-lib/tests/: common.rs  diesel_basic_test.rs  diesel_isolated.rs  diesel_model_test.rs  diesel_models_test.rs  diesel_storage_test.rs  lib.rs
claris-fuse/src/: main.rs
crates/claris-fuse-lib/: Cargo.toml  TEST_REORGANIZATION.md
crates/claris-fuse-lib/docs/: domain_model.md
crates/claris-fuse-lib/src/cli/: commands.rs
crates/claris-fuse-lib/src/filesystems/: mod.rs  passthrough.rs  path_manager.rs
crates/claris-fuse-lib/src/storage/: mod.rs  sqlite.rs
crates/claris-fuse-lib/tests/: README.md  cli_commands_test.rs  diesel_isolated.rs  diesel_storage_test.rs  functional_cli_commands_test.rs  mod.rs  operation_capture.rs  passthrough_test.rs
crates/claris-fuse-lib/tests-old/: passthrough_test.rs  touch_test.rs
crates/claris-fuse-lib/tests-old/common/: filesystem_harness.rs  harness.rs  op_harness.rs
crates/claris-fuse-lib/tests/common/: mod.rs  opcode_harness.rs
crates/claris-fuse-lib/tests/functional/: mod.rs  mount_test.rs  operation_capture_test.rs
crates/claris-fuse-lib/tests/integration/: mod.rs  operation_tracking_test.rs  passthrough_mount_test.rs  passthrough_operations_test.rs  write_operations_test.rs
crates/claris-fuse-lib/tests/unit/: example_test.rs
crates/claris-fuse/src/: main.rs
crates/fuse-fd-poc/: Cargo.toml  README.md
crates/fuse-fd-poc/src/: main.rs
crates/ize/: Cargo.toml  README.md
crates/ize-lib/: Cargo.toml
crates/ize-lib/docs/: domain_model.md
crates/ize-lib/src/: lib.rs
crates/ize-lib/src/backing_fs/: libc_impl.rs  mod.rs
crates/ize-lib/src/cli/: commands.rs
crates/ize-lib/src/filesystems/: error.rs  mod.rs  observing.rs  passthrough.rs  passthrough2.rs  passthrough_fd.rs
crates/ize-lib/src/operations/: dump_observer.rs  mod.rs  opcode.rs  queue.rs  recorder.rs
crates/ize-lib/src/pijul/: backend.rs  mod.rs  operations.rs  query.rs
crates/ize-lib/src/project/: manager.rs  mod.rs
crates/ize-lib/src/storage/: mod.rs
crates/ize-lib/src/vcs/: README.md  git.rs  jujutsu.rs  mod.rs  pijul.rs
crates/ize-lib/tests/: README.md  mod.rs  operation_capture.rs
crates/ize-lib/tests/common/: filesystem_harness.rs  harness.rs  mod.rs  op_harness.rs
crates/ize-lib/tests/functional/: mod.rs  operation_capture_test.rs
crates/ize-lib/tests/integration/: mod.rs  operation_tracking_test.rs  passthrough_mount_test.rs  passthrough_operations_test.rs  write_operations_test.rs
crates/ize-lib/tests/unit/: example_test.rs
crates/ize/scripts/: all-operations.sh  run-dump-opcode.sh
crates/ize/src/: main.rs
crates/izev/: Cargo.toml
crates/izev/src/: app.rs  event.rs  main.rs  tui.rs  ui.rs
docs/architecture/: index.md
model_tests/: Cargo.toml
model_tests/src/: main.rs
research/: 3d_diff_visualization.md  architecture2.md  current_test_analysis.md  ebpf_file_monitor_analysis.md  end-to-end-testing.md  filesystem-layering.md  index.md  izev.md  opcode_queue_design.md  passthrough.md  passthrough2-idiomatic-rust.md  passthrough2.md  pijul-backend-opcode-recording-backend-rework.md  pijul-integration-points.md  pijul_backend_migration.md  pijul_storage_analysis.md  rust_persistence_engines.md  sanakirja_analysis.md  test_plan.md  test_reorganization.md  testing_harness_framework.md  voice_command_integration.md
research/interception/: fd_handling.md  filesystem_interception_alternatives.md
research/opcodes/: opcode-design.md  opcode-recorder-design.md
research/pijul/: architecture-bare-pijul.md  opcode-recording-write.md  opcode-recording.md  pijul-bare-operations.md  project-initialization.md  querying.md
scripts/: README.md  dev.nu  epic-status.sh  test-dump.sh  test-pijul-export.sh  test-vcs-filtering.sh  w.nu  watch-simple.nu  watch.nu
scripts/bugs/: git-commit-hang.sh
test/src/: claris-fuse.db
tests/integration/: README.md  operation_tracking_test.rs  write_operations_test.rs
