[workspace]
members = ["crates/claris-fuse", "crates/claris-fuse-lib"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Claris Team"]
description = "A FUSE filesystem with version control capabilities"
repository = "https://github.com/claris/claris-fuse"
license = "MIT"
