[workspace]
members = ["crates/ize", "crates/ize-lib"]
exclude = ["vendor/pijul"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fluid Notion Team"]
description = "A FUSE filesystem with version control capabilities"
repository = "https://github.com/fluid-notion-systems/ize"
license = "MIT"
