[workspace]
members = ["crates/ize", "crates/ize-lib", "crates/izev"]
exclude = ["vendor/pijul"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fluid Notion Team"]
description = "A FUSE filesystem with version control capabilities"
repository = "https://github.com/fluid-notion-systems/ize"
license = "MIT"

[workspace.dependencies]
# Pijul backend
libpijul = { path = "vendor/pijul/libpijul", default-features = false, features = ["ondisk-repos"] }

# Common dependencies
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
fuser = "0.15.1"
tempfile = "3.8.0"
ratatui = "0.28"
crossterm = "0.28"
