[package]
name = "claris-fuse-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
fuser = "0.15.1"
libc = "0.2"
log = "0.4"
env_logger = "0.10"
rusqlite = { version = "0.30.0", features = ["bundled"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"