[package]
name = "claris-fuse-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
fuser = "0.15.1"
libc = "0.2"
log = "0.4"
env_logger = "0.10"
rusqlite = { version = "0.30.0", features = ["bundled", "blob"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
r2d2 = "0.8.10"
nix = "0.30.1"

[dev-dependencies]
tempfile = "3.8.0"
serial_test = "2.0.0"