[package]
name = "model_tests"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8.0"
serial_test = "2.0.0"