[package]
name = "ize-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
fuser = "0.15.1"
libc = "0.2"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
nix = { version = "0.30.1", features = ["fs"] }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8.0"
serial_test = "2.0.0"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
more-asserts = "0.3"


# [dev-dependencies.cargo-husky]
# version = "1"
# default-features = false # Disable features which are enabled by default
# features = [
#     "precommit-hook",
#     "run-for-all",
#     "run-cargo-test",
#     "run-cargo-clippy",
# ]
