[package]
name = "ize-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
fuser = "0.15.1"
libc = "0.2"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
nix = { version = "0.30.1", features = ["fs", "user"] }
clap = { version = "4.4", features = ["derive"] }

# Pijul backend dependencies
libpijul = { version = "1.0.0-beta.10", default-features = false, features = ["ondisk-repos"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
rlimit = "0.10"

[dev-dependencies]
tempfile = "3.8.0"
serial_test = "2.0.0"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
more-asserts = "0.3"


# [dev-dependencies.cargo-husky]
# version = "1"
# default-features = false # Disable features which are enabled by default
# features = [
#     "precommit-hook",
#     "run-for-all",
#     "run-cargo-test",
#     "run-cargo-clippy",
# ]
