[package]
name = "ize-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
libpijul.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
clap.workspace = true
fuser.workspace = true

# Local dependencies
libc = "0.2"
nix = { version = "0.30.1", features = ["fs", "user"] }
rlimit = "0.10"
jiff = { version = "0.2", features = ["serde"] }
parking_lot = "0.12"
regex = "1.10"

[dev-dependencies]
tempfile.workspace = true
serial_test = "2.0.0"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
more-asserts = "0.3"
