[package]
name = "Ize"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
Ize-lib = { path = "../Ize-lib" }
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
ctrlc = "3.4"
fuser = "0.15.1"
