[package]
name = "ize"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ize-lib = { path = "../ize-lib" }

# Workspace dependencies
clap.workspace = true
env_logger.workspace = true
log.workspace = true
anyhow.workspace = true
fuser.workspace = true

# Local dependencies
ctrlc = "3.4"
